crates/formatter/tests/snapshots/snapshots__migrations__000413_add_subagent_id_to_dev_containers.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_devcontainers drop column subagent_id;
