crates/formatter/tests/snapshots/snapshots__migrations__000413_add_subagent_id_to_dev_containers.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_devcontainers
	add column subagent_id uuid references workspace_agents (
		id
	) on delete cascade;
