crates/formatter/tests/snapshots/snapshots__migrations__000414_add_update_agent_api_key_scope.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- No-op for update agent scopes: keep enum values to avoid dependency churn.
