crates/formatter/tests/snapshots/snapshots__migrations__000414_add_update_agent_api_key_scope.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type api_key_scope add value if not exists 'workspace:update_agent';
alter type api_key_scope add value if not exists 'workspace_dormant:update_agent';
