crates/formatter/tests/snapshots/snapshots__migrations__000417_workspace_acl_object_constraint.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspaces drop constraint if exists group_acl_is_object,
drop constraint if exists user_acl_is_object;
