crates/formatter/tests/snapshots/snapshots__migrations__000417_workspace_acl_object_constraint.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Add constraints that reject 'null'::jsonb for group and user ACLs
-- because they would break the new workspace_expanded view.
update workspaces set group_acl = '{}'::jsonb where group_acl = 'null'::jsonb;
update workspaces set user_acl = '{}'::jsonb where user_acl = 'null'::jsonb;

alter table workspaces
	add constraint group_acl_is_object check (jsonb_typeof(group_acl) = 'object'),
	add constraint user_acl_is_object check (jsonb_typeof(user_acl) = 'object');
