crates/formatter/tests/snapshots/snapshots__migrations__000418_add_client_to_aibridge_interceptions.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table aibridge_interceptions
	add column client varchar (64) default 'Unknown';

create index idx_aibridge_interceptions_client
	on aibridge_interceptions (client);
